--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -20,7 +20,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: #D0D3D4;
+    background: 	#17202A;
   }
 }
